<resources>
    <string name="app_name">GhostHouse</string>
    <string name="title_home">Home</string>
    <string name="title_ra">AR</string>
    <string name="title_cloud">Data</string>
    <string name="title_account">User</string>
    <string name="title_activity_new_device">New Device</string>
    <string name="device_name_tv_str">Name</string>
    <string name="device_name_et_hint_str">Device name</string>
    <string name="avilable_devices_tv_str">Available wifi</string>
    <string name="add_device_but_str">Add</string>
    <string name="loading_devices_tv_str">Searching for available devices…</string>

    <string name="simple_fragment_transition">simple_fragment_transition</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="log_in">Log In</string>
    <!--google signin-->
    <string name="server_client_id">551936819726-rd00cv0sbvs367hb48d9tvtp83a3147m.apps.googleusercontent.com</string>
    <string name="latitude_label" />
    <string name="longitude_label" />
    <string name="eula_string">Please read this End-User License Agreement ("Agreement") carefully before clicking the "I Agree" button, downloading or using GhostHouse ("Application").

\nBy clicking the "I Agree" button, downloading or using the Application, you are agreeing to be bound by the terms and conditions of this Agreement.

\n\nIf you do not agree to the terms of this Agreement, do not click on the "I Agree" button and do not download or use the Application.

\n\nLicense

\n\nGhostBusters grants you a revocable, non-exclusive, non-transferable, limited license to download, install and use the Application solely for your personal, non-commercial purposes strictly in accordance with the terms of this Agreement.

\n\nRestrictions

\n\nYou agree not to, and you will not permit others to:

\n\na) license, sell, rent, lease, assign, distribute, transmit, host, outsource, disclose or otherwise commercially exploit the Application or make the Application available to any third party.

\n\nThe Restrictions section is for applying certain restrictions on the app usage, e.g. user can\'t sell app, user can\'t distribute the app. For the full disclosure section, create your own EULA.

\n\nModifications to Application

\n\nGhostBusters reserves the right to modify, suspend or discontinue, temporarily or permanently, the Application or any service to which it connects, with or without notice and without liability to you.

\n\nThe Modifications to Application section is for apps that will be updated or regularly maintained. For the full disclosure section, create your own EULA.

\n\nTerm and Termination

\n\nThis Agreement shall remain in effect until terminated by you or GhostBusters.

\n\nGhostBusters may, in its sole discretion, at any time and for any or no reason, suspend or terminate this Agreement with or without prior notice.

\n\nThis Agreement will terminate immediately, without prior notice from GhostBusters, in the event that you fail to comply with any provision of this Agreement. You may also terminate this Agreement by deleting the Application and all copies thereof from your mobile device or from your desktop.

\n\nUpon termination of this Agreement, you shall cease all use of the Application and delete all copies of the Application from your mobile device or from your desktop.

\n\nSeverability

\n\nIf any provision of this Agreement is held to be unenforceable or invalid, such provision will be changed and interpreted to accomplish the objectives of such provision to the greatest extent possible under applicable law and the remaining provisions will continue in full force and effect.

\n\nAmendments to this Agreement

\n\nGhostBusters reserves the right, at its sole discretion, to modify or replace this Agreement at any time. If a revision is material we will provide at least 30 days notice prior to any new terms taking effect. What constitutes a material change will be determined at our sole discretion.

\n\nContact Information

\n\nIf you have any questions about this Agreement, please contact us.
</string>
    <string name="ok">I agree</string>
    <string name="cancel">Disagree</string>
    <string name="device_password_tv_str">Wifi Password</string>
    <string name="device_password_et_hint_str">Password</string>
    <string name="device_ib_content_description">Device details</string>
    <string name="wifi_check">Checking Wifi...</string>
    <string name="wifi_enabled">Wifi Enabled</string>
    <string name="wifi_activated">Wifi Activated</string>
</resources>
